--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "client-install": "cd client && npm install",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "client": "cd client && npm run build",
+    "client": "cd client && npm build",
     "start": "node ./server/server.js",
-    "localStart": "nodemon ./server/server.js",
+    "server": "nodemon ./server/server.js",
     "build": "cd client && npm run build",
-    "dev": "npm run client && npm run localStart",
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run build\"",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "repository": {
@@ -38,6 +38,7 @@
     "sequelize": "^4.42.0"
   },
   "devDependencies": {
+    "concurrently": "^4.1.0",
     "eslint": "^5.6.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
