--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "scripts": {
     "client-install": "cd client && npm install",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "client": "cd client && npm build",
+    "client": "cd client && npm start",
     "start": "node ./server/server.js",
     "server": "nodemon ./server/server.js",
     "build": "cd client && npm run build",
-    "dev": "npm run client && npm run localStart",
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "cd client && npm install && npm run build",
-    "db:query": "psql -U staff -d ydrc1 ./queries.sql"
+    "db:query": "psql -U ydrc -d ydrc -a -f ./queries.sql"
   },
   "repository": {
     "type": "git",
