--- a/package.json
+++ b/package.json
@@ -11,19 +11,18 @@
     "server": "nodemon ./server/server.js",
     "build": "cd client && npm run build",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "cd client && npm install && npm run build",
-    "db:query": "psql -U staff -d ydrc1 -a -f ./queries.sql"
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/FACK1/ReservationSystem.git"
+    "url": "git+https://github.com/RazanTayyem/ReservationSystem.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/FACK1/ReservationSystem/issues"
+    "url": "https://github.com/RazanTayyem/ReservationSystem/issues"
   },
-  "homepage": "https://github.com/FACK1/ReservationSystem#readme",
+  "homepage": "https://github.com/RazanTayyem/ReservationSystem#readme",
   "dependencies": {
     "bcrypt": "^3.0.4",
     "bcryptjs": "^2.4.3",
